--- a/app/src/main/res/layout/activity_download_details.xml
+++ b/app/src/main/res/layout/activity_download_details.xml
@@ -21,7 +21,7 @@
             android:id="@+id/sliding_tabs"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="?attr/colorPrimary"
+            android:background="@color/colorPrimary"
             android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
             app:tabIndicatorColor="@android:color/white"
             app:tabMode="scrollable"
@@ -31,9 +31,9 @@
 
     <View
         android:id="@+id/fake_elevation"
-        android:layout_marginTop="104dp"
         android:layout_width="match_parent"
         android:layout_height="@dimen/toolbar_elevation"
+        android:layout_marginTop="104dp"
         android:background="@drawable/toolbar_shadow"/>
 
     <android.support.v4.view.ViewPager
