--- a/app/src/main/res/layout/tab_advanced_installer.xml
+++ b/app/src/main/res/layout/tab_advanced_installer.xml
@@ -15,16 +15,7 @@
         android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
         app:tabIndicatorColor="@android:color/white"
         app:tabMode="scrollable"
-        app:tabTextAppearance="@style/TextAppearance.Design.Tab">
-
-        <ProgressBar
-            android:id="@+id/toolbar_progress_bar"
-            android:layout_width="24dp"
-            android:layout_height="24dp"
-            android:layout_gravity="end"
-            android:visibility="gone"/>
-
-    </android.support.design.widget.TabLayout>
+        app:tabTextAppearance="@style/TextAppearance.Design.Tab"/>
 
     <android.support.v4.view.ViewPager
         android:id="@+id/pager"
