Some small UI improvements; cleanup

--- a/app/src/main/res/layout/activity_installation.xml
+++ b/app/src/main/res/layout/activity_installation.xml
@@ -25,6 +25,7 @@
                 android:background="@android:color/transparent"
                 android:padding="8dp"
                 android:textColor="@android:color/white"
+                android:textSize="12sp"
                 android:textStyle="bold"
                 android:typeface="monospace"/>
 
