No more tabs in the framework section
All details and actions fit on one screen now. Further cleanup will
follow.

--- a/app/src/main/res/menu/menu_installer.xml
+++ b/app/src/main/res/menu/menu_installer.xml
@@ -20,4 +20,11 @@
 
     </group>
 
+    <group android:id="@+id/menu_framework_download">
+        <item
+            android:id="@+id/show_outdated"
+            android:checkable="true"
+            android:title="Show outdated"/>
+    </group>
+
 </menu>
