--- a/app/src/main/res/layout/framework_zip_item.xml
+++ b/app/src/main/res/layout/framework_zip_item.xml
@@ -4,6 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:background="?android:attr/selectableItemBackground"
+    android:clickable="true"
     android:orientation="horizontal"
     android:paddingBottom="6dp"
     android:paddingEnd="14dp"
