--- a/app/src/main/res/layout/activity_installation.xml
+++ b/app/src/main/res/layout/activity_installation.xml
@@ -1,14 +1,15 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                xmlns:app="http://schemas.android.com/apk/res-auto"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:padding="8dp">
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+              xmlns:app="http://schemas.android.com/apk/res-auto"
+              xmlns:tools="http://schemas.android.com/tools"
+              android:layout_width="match_parent"
+              android:layout_height="match_parent"
+              android:orientation="vertical"
+              android:padding="8dp">
 
     <ScrollView
-        android:id="@+id/scroller_id"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginBottom="50dp"
+        android:layout_height="0dp"
+        android:layout_weight="1"
         android:fillViewport="true"
         android:scrollbars="vertical">
 
@@ -22,12 +23,21 @@
                 android:id="@+id/console"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:background="@android:color/transparent"
                 android:padding="8dp"
                 android:textColor="@android:color/white"
                 android:textSize="12sp"
                 android:textStyle="bold"
                 android:typeface="monospace"/>
+
+            <ImageView
+                android:id="@+id/console_result"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:alpha="0.02"
+                android:scaleType="fitStart"
+                android:visibility="gone"
+                tools:src="@drawable/ic_check_circle"
+                tools:visibility="visible"/>
 
         </android.support.v7.widget.CardView>
 
@@ -35,8 +45,7 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:layout_alignParentBottom="true"
+        android:layout_height="wrap_content"
         android:padding="4dp">
 
         <ProgressBar
@@ -44,24 +53,40 @@
             style="?android:attr/progressBarStyleHorizontal"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_centerHorizontal="true"
-            android:layout_centerVertical="true"/>
+            android:indeterminate="true"
+            tools:indeterminate="false"
+            tools:max="15"
+            tools:progress="10"
+            tools:rotation="180"/>
 
-        <android.support.v7.widget.CardView
-            android:id="@+id/result_container"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:visibility="invisible"
-            app:cardUseCompatPadding="true">
+        <LinearLayout
+            android:id="@+id/buttonPanel"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentRight="true"
+            android:layout_below="@id/progressBar"
+            android:visibility="gone"
+            tools:visibility="visible">
 
-            <ImageView
-                android:id="@+id/console_result"
+            <Button
+                android:id="@+id/cancel"
+                style="?attr/buttonBarNegativeButtonStyle"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center"/>
+                android:text="Not now"
+                android:textColor="?android:attr/textColorSecondary"/>
 
-        </android.support.v7.widget.CardView>
+            <Button
+                android:id="@+id/reboot"
+                style="?attr/buttonBarPositiveButtonStyle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:gravity="start|center_vertical"
+                tools:text="Reboot (14)"/>
+
+        </LinearLayout>
 
     </RelativeLayout>
 
-</RelativeLayout>
+</LinearLayout>
