Less colors for install/uninstall headers
Using green/red color suggests that this action is right/wrong, but
uninstall is totally valid as well. Gray might be a bit hard to see in the
light theme, so this might have to be tweaked again later.

--- a/app/src/main/res/layout/framework_zip_group.xml
+++ b/app/src/main/res/layout/framework_zip_group.xml
@@ -24,6 +24,7 @@
             android:padding="6dp"
             android:textAllCaps="true"
             android:textStyle="bold"
+            android:background="?attr/sticky_header_background"
             tools:text="@string/install"/>
     </LinearLayout>
 
