--- a/app/src/main/res/menu/context_menu_modules_bookmark.xml
+++ b/app/src/main/res/menu/context_menu_modules_bookmark.xml
@@ -11,7 +11,7 @@
 
     <item
         android:id="@+id/download_bookmark"
-        android:title="@string/tabDownload"/>
+        android:title="@string/download_view_download"/>
 
     <item
         android:id="@+id/download_remove_bookmark"
