Use installed instead of active version in most places

--- a/app/src/main/res/layout/status_installer.xml
+++ b/app/src/main/res/layout/status_installer.xml
@@ -86,7 +86,7 @@
                             android:padding="6dp"
                             android:textColor="@color/warning"
                             android:textStyle="bold"
-                            tools:text="@string/installed_lollipop"
+                            tools:text="@string/framework_active"
                             tools:textColor="@color/darker_green"/>
 
                         <TextView
