--- a/app/src/main/res/layout/xposed_not_active_note.xml
+++ b/app/src/main/res/layout/xposed_not_active_note.xml
@@ -27,6 +27,7 @@
             android:src="@drawable/ic_warning_grey"/>
 
         <TextView
+            android:id="@android:id/title"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
