--- a/app/src/main/res/menu/menu_installer.xml
+++ b/app/src/main/res/menu/menu_installer.xml
@@ -24,7 +24,7 @@
         <item
             android:id="@+id/show_outdated"
             android:checkable="true"
-            android:title="Show outdated"/>
+            android:title="@string/show_outdated"/>
     </group>
 
 </menu>
