Use other icon for current device string

--- a/app/src/main/res/layout/status_installer.xml
+++ b/app/src/main/res/layout/status_installer.xml
@@ -178,7 +178,7 @@
                             <ImageView
                                 android:layout_width="24dp"
                                 android:layout_height="24dp"
-                                android:src="@drawable/ic_manufacturer"/>
+                                android:src="@drawable/ic_phone"/>
 
                             <LinearLayout
                                 android:layout_width="fill_parent"
