--- a/app/src/main/res/layout/framework_zip_group.xml
+++ b/app/src/main/res/layout/framework_zip_group.xml
@@ -25,7 +25,7 @@
             android:textAllCaps="true"
             android:textStyle="bold"
             android:background="?attr/sticky_header_background"
-            tools:text="@string/install"/>
+            tools:text="@string/install_update"/>
     </LinearLayout>
 
 </android.support.v7.widget.CardView>
