Fix listview not scrollable

--- a/app/src/main/res/layout/tab_downloader.xml
+++ b/app/src/main/res/layout/tab_downloader.xml
@@ -27,6 +27,7 @@
                 android:scrollbarStyle="outsideOverlay"/>
 
             <LinearLayout
+                android:id="@+id/refresh_hint"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:gravity="center"
