--- a/app/src/main/res/layout/list_item_module.xml
+++ b/app/src/main/res/layout/list_item_module.xml
@@ -47,7 +47,6 @@
                     android:layout_height="wrap_content"
                     android:layout_marginRight="4dip"
                     android:layout_weight="1"
-                    android:singleLine="false"
                     android:textAppearance="?android:attr/textAppearanceMedium"
                     android:textIsSelectable="false"/>
 
@@ -56,7 +55,11 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="4dip"
-                    android:gravity="right"
+                    android:layout_marginStart="4dip"
+                    android:ellipsize="middle"
+                    android:gravity="end"
+                    android:maxLines="1"
+                    android:maxWidth="150dp"
                     android:textAppearance="?android:attr/textAppearanceSmall"
                     android:textColor="@android:color/tertiary_text_dark"
                     android:textIsSelectable="false"/>
