--- a/app/src/main/res/layout/toolbar.xml
+++ b/app/src/main/res/layout/toolbar.xml
@@ -10,8 +10,8 @@
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
         android:background="?attr/colorPrimary"
-        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
-        app:theme="@style/Theme.XposedInstaller.Toolbar"/>
+        android:theme="@style/Theme.XposedInstaller.Toolbar"
+        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>
 
     <View
         android:id="@+id/elevation"
