Slightly change how the Android version is shown

--- a/app/src/main/res/layout/status_installer.xml
+++ b/app/src/main/res/layout/status_installer.xml
@@ -159,7 +159,7 @@
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
                                     android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
-                                    tools:text="Android Marshmallow 6.0.1 (API 23)"/>
+                                    tools:text="Android 6.0.1 (Marshmallow, API 23)"/>
 
                             </LinearLayout>
 
