Add simple splash screen

--- a/app/src/main/res/values-v21/styles.xml
+++ b/app/src/main/res/values-v21/styles.xml
@@ -31,7 +31,11 @@
         <item name="background_card_pressed">@drawable/background_card_pressed_black</item>
     </style>
 
-    <style name="Theme.XposedInstaller.Transparent" parent="Theme.AppCompat.NoActionBar">
+    <style name="Theme.XposedInstaller.Splash" parent="Theme.AppCompat.NoActionBar">
+        <item name="android:windowBackground">@color/background_material_dark</item>
+        <item name="android:statusBarColor">@color/background_material_dark</item>
     </style>
+
+    <style name="Theme.XposedInstaller.Transparent" parent="Theme.AppCompat.NoActionBar" />
 
 </resources>
