--- a/app/src/main/res/menu/menu_installer.xml
+++ b/app/src/main/res/menu/menu_installer.xml
@@ -20,6 +20,11 @@
 
     </group>
 
+    <item
+        android:id="@+id/dexopt_now"
+        android:icon="@drawable/ic_flash"
+        android:title="@string/dexopt_now"/>
+
     <group android:id="@+id/menu_framework_download">
         <item
             android:id="@+id/show_outdated"
